[project]
name = "dbert"
version = "0.1.0"
description = ""
authors = [
    {name = "Philipp Zettl"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "transformers[torch] (>=4.57.3,<5.0.0)",
    "protobuf (>=6.33.1,<7.0.0)",
    "peft (>=0.18.0,<0.19.0)",
    "wandb (>=0.23.0,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
